@@ -1,3 +1,7 @@
+2010-05-19  Dmitry Dulepov  <dmitry.dulepov+typo3svn@gmail.com>
+
+	* Fixed bug #6689: do not limit normal tt_news sitemap to two days
+
 2010-01-09  Dmitry Dulepov  <dmitry.dulepov+typo3svn@gmail.com>
 
 	* Fixed: deprecated calls
